2005-08-05  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Rename scaled_font_backend->destroy to the more
	accurate fini, (since it frees only the dependent data within the
	scaled_font and not the scaled_font itself).

	* src/cairo-atsui-font.c: (_cairo_atsui_font_fini):
	* src/cairo-font.c: (cairo_scaled_font_destroy):
	* src/cairo-ft-font.c: (_cairo_ft_scaled_font_fini):
	* src/cairo-win32-font.c: (_cairo_win32_scaled_font_fini):
	Track rename of scaled_font_backend->fini.

2005-08-05  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Rename scaled_font_backend->create to
	create_toy. Move declaration of cairo_simple_font_face_t from
	cairo_font.c to cairoint.h and rename it
	cairo_toy_font_face_t. Rework create_toy to accept a
	cairo_toy_font_face_t rather than separate family, slant, and
	weight.
	
	* src/cairo-atsui-font.c: (_cairo_atsui_font_create_toy):
	* src/cairo-ft-font.c: (_cairo_ft_scaled_font_create_toy):
	* src/cairo-win32-font.c: (_cairo_win32_scaled_font_create_toy):
	Track change in create_toy interface.

	* src/cairo-font.c: (_cairo_toy_font_face_create_from_cache_key),
	(_cairo_simple_font_cache_create_entry),
	(_cairo_simple_font_face_destroy),
	(_cairo_simple_font_face_create_font):
	Partial rename of simple->toy. It's not complete as this is a step
	in the process of merging in a large patch of mine which actually
	removes most of the affected code.

2005-08-05  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore: ignore a8-mask

2005-08-05  Carl Worth  <cworth@cworth.org>

	* test/a8-mask.c (draw): Patch memory leaks.

2005-08-05  Jeff Muizelaar  <jeff@infidigm.net>

	* test/Makefile.am:
	* test/a8-mask-ref.png:
	* test/a8-mask.c: (draw), (main):
	Add a test case for CAIRO_FORMAT_A8 masks that fails with
	libpixman.

2005-08-05  Carl Worth  <cworth@cworth.org>

	* autogen.sh (automake_min_vers): Bump automake_min_vers up to 1.7
	since we clearly don't work with 1.4 anymore.

2005-08-05  Jeff Muizelaar  <jeff@infidigm.net>
